# bknd_recruitment

./: README.md
github/Descriptor-Based-Dependency-Injection/: README.md  pyproject.toml
github/Everything-I-learn-about-Descriptors/: pyproject.toml
github/Everything-I-learn-about-Descriptors/src/descriptors/: my_code.py  pydoc1.py  pydoc2.py
github/Metaprogramming & Code Generation/Metaprogramming/: README.md  pyproject.toml
github/Python-Class-with-Temporary-Value-Management/: Readme.md  pyproject.toml
github/Python-Class-with-Temporary-Value-Management/src/tests/: big_boss.py  test1.py  test2.py  test3.py  test4.py
github/Robot-Terminal-version/: .gitignore  README.md  pyproject.toml
github/Robot-Terminal-version/src/robot_terminal_version/: __init__.py  energy_efficient.py  flying_robot.py  hybrid_robot.py  robot.py  wheeled_robot.py
github/Robot-Terminal-version/tests/: __init__.py
github/SparseMatrixMagic/: .gitignore  README.md  pyproject.toml
github/SparseMatrixMagic/src/matrixspark/: core.py  main.py  operations.py  utils.py
github/SparseMatrixMagic/tests/: __init__.py
