[project]
name = "descriptor-based-dependency-injection"
version = "0.1.0"
description = ""
authors = [
    {name = "Hesam Pourabbasian",email = "hesampourabbasian6@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "descriptor_based_dependency_injection", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
